# shaderbg

./: .gitignore  README.md  autoformat.sh  flake.nix  main.c  meson.build
demo/: bow.frag  scope.frag  spiral.frag
demo/isovalues3/: A.frag  image.frag
demo/lorenz/: A.frag  common.frag  image.frag
demo/lorenz-rotating/: A.frag  common.frag  image.frag
